preproparser.output
State 387 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | CONSTANT
    3                   | STRING_LITERAL
    4                   | '(' expression ')'

    5 postfix_expression: primary_expression
    6                   | postfix_expression '[' expression ']'
    7                   | postfix_expression '(' ')'
    8                   | postfix_expression '(' argument_expression_list ')'
    9                   | postfix_expression '.' IDENTIFIER
   10                   | postfix_expression PTR_OP IDENTIFIER
   11                   | postfix_expression INC_OP
   12                   | postfix_expression DEC_OP
   13                   | '(' type_name ')' '{' initializer_list '}'
   14                   | '(' type_name ')' '{' initializer_list ',' '}'

   15 argument_expression_list: assignment_expression
   16                         | argument_expression_list ',' assignment_expression

   17 unary_expression: postfix_expression
   18                 | INC_OP unary_expression
   19                 | DEC_OP unary_expression
   20                 | unary_operator cast_expression
   21                 | SIZEOF unary_expression
   22                 | SIZEOF '(' type_name ')'

   23 unary_operator: '&'
   24               | '*'
   25               | '+'
   26               | '-'
   27               | '~'
   28               | '!'

   29 cast_expression: unary_expression
   30                | '(' type_name ')' cast_expression

   31 multiplicative_expression: cast_expression
   32                          | multiplicative_expression '*' cast_expression
   33                          | multiplicative_expression '/' cast_expression
   34                          | multiplicative_expression '%' cast_expression

   35 additive_expression: multiplicative_expression
   36                    | additive_expression '+' multiplicative_expression
   37                    | additive_expression '-' multiplicative_expression

   38 shift_expression: additive_expression
   39                 | shift_expression LEFT_OP additive_expression
   40                 | shift_expression RIGHT_OP additive_expression

   41 relational_expression: shift_expression
   42                      | relational_expression '<' shift_expression
   43                      | relational_expression '>' shift_expression
   44                      | relational_expression LE_OP shift_expression
   45                      | relational_expression GE_OP shift_expression

   46 equality_expression: relational_expression
   47                    | equality_expression EQ_OP relational_expression
   48                    | equality_expression NE_OP relational_expression

   49 and_expression: equality_expression
   50               | and_expression '&' equality_expression

   51 exclusive_or_expression: and_expression
   52                        | exclusive_or_expression '^' and_expression

   53 inclusive_or_expression: exclusive_or_expression
   54                        | inclusive_or_expression '|' exclusive_or_expression

   55 logical_and_expression: inclusive_or_expression
   56                       | logical_and_expression AND_OP inclusive_or_expression

   57 logical_or_expression: logical_and_expression
   58                      | logical_or_expression OR_OP logical_and_expression

   59 conditional_expression: logical_or_expression
   60                       | logical_or_expression '?' expression ':' conditional_expression

   61 assignment_expression: conditional_expression
   62                      | unary_expression assignment_operator assignment_expression

   63 assignment_operator: '='
   64                    | MUL_ASSIGN
   65                    | DIV_ASSIGN
   66                    | MOD_ASSIGN
   67                    | ADD_ASSIGN
   68                    | SUB_ASSIGN
   69                    | LEFT_ASSIGN
   70                    | RIGHT_ASSIGN
   71                    | AND_ASSIGN
   72                    | XOR_ASSIGN
   73                    | OR_ASSIGN

   74 expression: assignment_expression
   75           | expression ',' assignment_expression

   76 constant_expression: conditional_expression

   77 declaration: declaration_specifiers ';'
   78            | declaration_specifiers init_declarator_list ';'

   79 declaration_specifiers: storage_class_specifier
   80                       | storage_class_specifier declaration_specifiers
   81                       | type_specifier
   82                       | type_specifier declaration_specifiers
   83                       | type_qualifier
   84                       | type_qualifier declaration_specifiers
   85                       | function_specifier
   86                       | function_specifier declaration_specifiers

   87 init_declarator_list: init_declarator
   88                     | init_declarator_list ',' init_declarator

   89 init_declarator: declarator
   90                | declarator '=' initializer

   91 storage_class_specifier: TYPEDEF
   92                        | EXTERN
   93                        | STATIC
   94                        | AUTO
   95                        | REGISTER

   96 type_specifier: VOID
   97               | CHAR
   98               | SHORT
   99               | INT
  100               | LONG
  101               | FLOAT
  102               | DOUBLE
  103               | SIGNED
  104               | UNSIGNED
  105               | BOOL
  106               | COMPLEX
  107               | IMAGINARY
  108               | USER_DEFINED
  109               | struct_or_union_specifier
  110               | enum_specifier

  111 struct_or_union_specifier: struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  112                          | struct_or_union '{' struct_declaration_list '}'
  113                          | struct_or_union IDENTIFIER

  114 struct_or_union: STRUCT
  115                | UNION

  116 struct_declaration_list: struct_declaration
  117                        | struct_declaration_list struct_declaration

  118 struct_declaration: specifier_qualifier_list struct_declarator_list ';'

  119 specifier_qualifier_list: type_qualifier
  120                         | type_qualifier specifier_qualifier_list
  121                         | type_specifier
  122                         | type_specifier specifier_qualifier_list

  123 struct_declarator_list: struct_declarator
  124                       | struct_declarator_list ',' struct_declarator

  125 struct_declarator: declarator
  126                  | ':' constant_expression
  127                  | declarator ':' constant_expression

  128 enum_specifier: ENUM '{' enumerator_list '}'
  129               | ENUM IDENTIFIER '{' enumerator_list '}'
  130               | ENUM '{' enumerator_list ',' '}'
  131               | ENUM IDENTIFIER '{' enumerator_list ',' '}'
  132               | ENUM IDENTIFIER

  133 enumerator_list: enumerator
  134                | enumerator_list ',' enumerator

  135 enumerator: IDENTIFIER
  136           | IDENTIFIER '=' constant_expression

  137 type_qualifier: CONST
  138               | RESTRICT
  139               | VOLATILE

  140 function_specifier: INLINE

  141 declarator: pointer direct_declarator
  142           | direct_declarator

  143 direct_declarator: IDENTIFIER
  144                  | '(' declarator ')'
  145                  | direct_declarator '[' type_qualifier_list assignment_expression ']'
  146                  | direct_declarator '[' type_qualifier_list ']'
  147                  | direct_declarator '[' assignment_expression ']'
  148                  | direct_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  149                  | direct_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  150                  | direct_declarator '[' type_qualifier_list '*' ']'
  151                  | direct_declarator '[' '*' ']'
  152                  | direct_declarator '[' ']'
  153                  | direct_declarator '(' parameter_type_list ')'
  154                  | direct_declarator '(' identifier_list ')'
  155                  | direct_declarator '(' ')'

  156 pointer: '*'
  157        | '*' type_qualifier_list
  158        | '*' pointer
  159        | '*' type_qualifier_list pointer

  160 type_qualifier_list: type_qualifier
  161                    | type_qualifier_list type_qualifier

  162 parameter_type_list: parameter_list
  163                    | parameter_list ',' ELLIPSIS

  164 parameter_list: parameter_declaration
  165               | parameter_list ',' parameter_declaration

  166 parameter_declaration: declaration_specifiers declarator
  167                      | declaration_specifiers abstract_declarator
  168                      | declaration_specifiers

  169 identifier_list: IDENTIFIER
  170                | identifier_list ',' IDENTIFIER

  171 type_name: specifier_qualifier_list
  172          | specifier_qualifier_list abstract_declarator

  173 abstract_declarator: pointer
  174                    | direct_abstract_declarator
  175                    | pointer direct_abstract_declarator

  176 direct_abstract_declarator: '(' abstract_declarator ')'
  177                           | '[' ']'
  178                           | '[' assignment_expression ']'
  179                           | direct_abstract_declarator '[' ']'
  180                           | direct_abstract_declarator '[' assignment_expression ']'
  181                           | '[' '*' ']'
  182                           | direct_abstract_declarator '[' '*' ']'
  183                           | '(' ')'
  184                           | '(' parameter_type_list ')'
  185                           | direct_abstract_declarator '(' ')'
  186                           | direct_abstract_declarator '(' parameter_type_list ')'

  187 initializer: assignment_expression
  188            | '{' initializer_list '}'
  189            | '{' initializer_list ',' '}'

  190 initializer_list: initializer
  191                 | designation initializer
  192                 | initializer_list ',' initializer
  193                 | initializer_list ',' designation initializer

  194 designation: designator_list '='

  195 designator_list: designator
  196                | designator_list designator

  197 designator: '[' constant_expression ']'
  198           | '.' IDENTIFIER

  199 statement: labeled_statement
  200          | compound_statement
  201          | expression_statement

  202 $@1: ε

  203 statement: $@1 selection_statement

  204 $@2: ε

  205 statement: $@2 iteration_statement
  206          | jump_statement

  207 labeled_statement: IDENTIFIER ':' statement
  208                  | CASE constant_expression ':' statement
  209                  | DEFAULT ':' statement

  210 compound_statement: '{' '}'
  211                   | '{' block_item_list '}'

  212 block_item_list: block_item
  213                | block_item_list block_item

  214 block_item: declaration
  215           | statement

  216 expression_statement: ';'
  217                     | expression ';'

  218 selection_statement: IF '(' expression ')' statement

  219 $@3: ε

  220 selection_statement: IF '(' expression ')' statement ELSE $@3 statement
  221                    | SWITCH '(' expression ')' statement

  222 iteration_statement: WHILE '(' expression ')' statement
  223                    | DO statement WHILE '(' expression ')' ';'
  224                    | FOR '(' expression_statement expression_statement ')' statement
  225                    | FOR '(' expression_statement expression_statement expression ')' statement
  226                    | FOR '(' declaration expression_statement ')' statement
  227                    | FOR '(' declaration expression_statement expression ')' statement

  228 jump_statement: GOTO IDENTIFIER ';'
  229               | CONTINUE ';'
  230               | BREAK ';'
  231               | RETURN ';'
  232               | RETURN expression ';'

  233 translation_unit: external_declaration
  234                 | translation_unit external_declaration

  235 external_declaration: function_definition
  236                     | declaration

  237 $@4: ε

  238 $@5: ε

  239 function_definition: declaration_specifiers declarator $@4 declaration_list $@5 compound_statement

  240 $@6: ε

  241 function_definition: declaration_specifiers declarator $@6 compound_statement

  242 declaration_list: declaration
  243                 | declaration_list declaration


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 28
    '%' (37) 34
    '&' (38) 23 50
    '(' (40) 4 7 8 13 14 22 30 144 153 154 155 176 183 184 185 186 218 220 221 222 223 224 225 226 227
    ')' (41) 4 7 8 13 14 22 30 144 153 154 155 176 183 184 185 186 218 220 221 222 223 224 225 226 227
    '*' (42) 24 32 150 151 156 157 158 159 181 182
    '+' (43) 25 36
    ',' (44) 14 16 75 88 124 130 131 134 163 165 170 189 192 193
    '-' (45) 26 37
    '.' (46) 9 198
    '/' (47) 33
    ':' (58) 60 126 127 207 208 209
    ';' (59) 77 78 118 216 217 223 228 229 230 231 232
    '<' (60) 42
    '=' (61) 63 90 136 194
    '>' (62) 43
    '?' (63) 60
    '[' (91) 6 145 146 147 148 149 150 151 152 177 178 179 180 181 182 197
    ']' (93) 6 145 146 147 148 149 150 151 152 177 178 179 180 181 182 197
    '^' (94) 52
    '{' (123) 13 14 111 112 128 129 130 131 188 189 210 211
    '|' (124) 54
    '}' (125) 13 14 111 112 128 129 130 131 188 189 210 211
    '~' (126) 27
    error (256)
    SIZEOF (258) 21 22
    PTR_OP (259) 10
    INC_OP (260) 11 18
    DEC_OP (261) 12 19
    LEFT_OP (262) 39
    RIGHT_OP (263) 40
    LE_OP (264) 44
    GE_OP (265) 45
    EQ_OP (266) 47
    NE_OP (267) 48
    AND_OP (268) 56
    OR_OP (269) 58
    MUL_ASSIGN (270) 64
    DIV_ASSIGN (271) 65
    MOD_ASSIGN (272) 66
    ADD_ASSIGN (273) 67
    SUB_ASSIGN (274) 68
    LEFT_ASSIGN (275) 69
    RIGHT_ASSIGN (276) 70
    AND_ASSIGN (277) 71
    XOR_ASSIGN (278) 72
    OR_ASSIGN (279) 73
    TYPEDEF <sym> (280) 91
    EXTERN <sym> (281) 92
    STATIC <sym> (282) 93 148 149
    AUTO <sym> (283) 94
    REGISTER <sym> (284) 95
    INLINE <sym> (285) 140
    RESTRICT <sym> (286) 138
    CHAR <sym> (287) 97
    SHORT <sym> (288) 98
    INT <sym> (289) 99
    LONG <sym> (290) 100
    SIGNED <sym> (291) 103
    UNSIGNED <sym> (292) 104
    FLOAT <sym> (293) 101
    DOUBLE <sym> (294) 102
    CONST <sym> (295) 137
    VOLATILE <sym> (296) 139
    VOID <sym> (297) 96
    BOOL <sym> (298) 105
    COMPLEX <sym> (299) 106
    IMAGINARY <sym> (300) 107
    USER_DEFINED <sym> (301) 108
    STRUCT <sym> (302) 114
    UNION <sym> (303) 115
    ENUM <sym> (304) 128 129 130 131 132
    ELLIPSIS <sym> (305) 163
    CASE (306) 208
    DEFAULT (307) 209
    IF (308) 218 220
    ELSE (309) 220
    SWITCH (310) 221
    WHILE (311) 222 223
    DO (312) 223
    FOR (313) 224 225 226 227
    GOTO (314) 228
    CONTINUE (315) 229
    BREAK (316) 230
    RETURN (317) 231 232
    CONSTANT <sym> (318) 2
    IDENTIFIER <sym> (319) 1 9 10 111 113 129 131 132 135 136 143 169 170 198 207 228
    STRING_LITERAL <sym> (320) 3


Nonterminals, with rules where they appear

    $accept (90)
        on left: 0
    primary_expression <sym> (91)
        on left: 1 2 3 4
        on right: 5
    postfix_expression <sym> (92)
        on left: 5 6 7 8 9 10 11 12 13 14
        on right: 6 7 8 9 10 11 12 17
    argument_expression_list (93)
        on left: 15 16
        on right: 8 16
    unary_expression <sym> (94)
        on left: 17 18 19 20 21 22
        on right: 18 19 21 29 62
    unary_operator (95)
        on left: 23 24 25 26 27 28
        on right: 20
    cast_expression <sym> (96)
        on left: 29 30
        on right: 20 30 31 32 33 34
    multiplicative_expression <sym> (97)
        on left: 31 32 33 34
        on right: 32 33 34 35 36 37
    additive_expression <sym> (98)
        on left: 35 36 37
        on right: 36 37 38 39 40
    shift_expression <sym> (99)
        on left: 38 39 40
        on right: 39 40 41 42 43 44 45
    relational_expression <sym> (100)
        on left: 41 42 43 44 45
        on right: 42 43 44 45 46 47 48
    equality_expression <sym> (101)
        on left: 46 47 48
        on right: 47 48 49 50
    and_expression <sym> (102)
        on left: 49 50
        on right: 50 51 52
    exclusive_or_expression <sym> (103)
        on left: 51 52
        on right: 52 53 54
    inclusive_or_expression <sym> (104)
        on left: 53 54
        on right: 54 55 56
    logical_and_expression <sym> (105)
        on left: 55 56
        on right: 56 57 58
    logical_or_expression <sym> (106)
        on left: 57 58
        on right: 58 59 60
    conditional_expression <sym> (107)
        on left: 59 60
        on right: 60 61 76
    assignment_expression <sym> (108)
        on left: 61 62
        on right: 15 16 62 74 75 145 147 148 149 178 180 187
    assignment_operator (109)
        on left: 63 64 65 66 67 68 69 70 71 72 73
        on right: 62
    expression <sym> (110)
        on left: 74 75
        on right: 4 6 60 75 217 218 220 221 222 223 225 227 232
    constant_expression <sym> (111)
        on left: 76
        on right: 126 127 136 197 208
    declaration <symList> (112)
        on left: 77 78
        on right: 214 226 227 236 242 243
    declaration_specifiers <sym> (113)
        on left: 79 80 81 82 83 84 85 86
        on right: 77 78 80 82 84 86 166 167 168 239 241
    init_declarator_list <symList> (114)
        on left: 87 88
        on right: 78 88
    init_declarator <sym> (115)
        on left: 89 90
        on right: 87 88
    storage_class_specifier <sym> (116)
        on left: 91 92 93 94 95
        on right: 79 80
    type_specifier <sym> (117)
        on left: 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110
        on right: 81 82 121 122
    struct_or_union_specifier <sym> (118)
        on left: 111 112 113
        on right: 109
    struct_or_union <sym> (119)
        on left: 114 115
        on right: 111 112 113
    struct_declaration_list <symList> (120)
        on left: 116 117
        on right: 111 112 117
    struct_declaration <symList> (121)
        on left: 118
        on right: 116 117
    specifier_qualifier_list <sym> (122)
        on left: 119 120 121 122
        on right: 118 120 122 171 172
    struct_declarator_list <symList> (123)
        on left: 123 124
        on right: 118 124
    struct_declarator <sym> (124)
        on left: 125 126 127
        on right: 123 124
    enum_specifier <sym> (125)
        on left: 128 129 130 131 132
        on right: 110
    enumerator_list (126)
        on left: 133 134
        on right: 128 129 130 131 134
    enumerator (127)
        on left: 135 136
        on right: 133 134
    type_qualifier <sym> (128)
        on left: 137 138 139
        on right: 83 84 119 120 160 161
    function_specifier <sym> (129)
        on left: 140
        on right: 85 86
    declarator <sym> (130)
        on left: 141 142
        on right: 89 90 125 127 144 166 239 241
    direct_declarator <sym> (131)
        on left: 143 144 145 146 147 148 149 150 151 152 153 154 155
        on right: 141 142 145 146 147 148 149 150 151 152 153 154 155
    pointer (132)
        on left: 156 157 158 159
        on right: 141 158 159 173 175
    type_qualifier_list (133)
        on left: 160 161
        on right: 145 146 148 149 150 157 159 161
    parameter_type_list <symList> (134)
        on left: 162 163
        on right: 153 184 186
    parameter_list <symList> (135)
        on left: 164 165
        on right: 162 163 165
    parameter_declaration <sym> (136)
        on left: 166 167 168
        on right: 164 165
    identifier_list <symList> (137)
        on left: 169 170
        on right: 154 170
    type_name <sym> (138)
        on left: 171 172
        on right: 13 14 22 30
    abstract_declarator (139)
        on left: 173 174 175
        on right: 167 172 176
    direct_abstract_declarator (140)
        on left: 176 177 178 179 180 181 182 183 184 185 186
        on right: 174 175 179 180 182 185 186
    initializer <sym> (141)
        on left: 187 188 189
        on right: 90 190 191 192 193
    initializer_list <sym> (142)
        on left: 190 191 192 193
        on right: 13 14 188 189 192 193
    designation (143)
        on left: 194
        on right: 191 193
    designator_list (144)
        on left: 195 196
        on right: 194 196
    designator (145)
        on left: 197 198
        on right: 195 196
    statement (146)
        on left: 199 200 201 203 205 206
        on right: 207 208 209 215 218 220 221 222 223 224 225 226 227
    $@1 (147)
        on left: 202
        on right: 203
    $@2 (148)
        on left: 204
        on right: 205
    labeled_statement (149)
        on left: 207 208 209
        on right: 199
    compound_statement (150)
        on left: 210 211
        on right: 200 239 241
    block_item_list (151)
        on left: 212 213
        on right: 211 213
    block_item (152)
        on left: 214 215
        on right: 212 213
    expression_statement (153)
        on left: 216 217
        on right: 201 224 225 226 227
    selection_statement (154)
        on left: 218 220 221
        on right: 203
    $@3 (155)
        on left: 219
        on right: 220
    iteration_statement (156)
        on left: 222 223 224 225 226 227
        on right: 205
    jump_statement (157)
        on left: 228 229 230 231 232
        on right: 206
    translation_unit (158)
        on left: 233 234
        on right: 0 234
    external_declaration (159)
        on left: 235 236
        on right: 233 234
    function_definition (160)
        on left: 239 241
        on right: 235
    $@4 (161)
        on left: 237
        on right: 239
    $@5 (162)
        on left: 238
        on right: 239
    $@6 (163)
        on left: 240
        on right: 241
    declaration_list <symList> (164)
        on left: 242 243
        on right: 239 243


State 0

    0 $accept: • translation_unit $end

    TYPEDEF       shift, and go to state 1
    EXTERN        shift, and go to state 2
    STATIC        shift, and go to state 3
    AUTO          shift, and go to state 4
    REGISTER      shift, and go to state 5
    INLINE        shift, and go to state 6
    RESTRICT      shift, and go to state 7
    CHAR          shift, and go to state 8
    SHORT         shift, and go to state 9
    INT           shift, and go to state 10
    LONG          shift, and go to state 11
    SIGNED        shift, and go to state 12
    UNSIGNED      shift, and go to state 13
    FLOAT         shift, and go to state 14
    DOUBLE        shift, and go to state 15
    CONST         shift, and go to state 16
    VOLATILE      shift, and go to state 17
    VOID          shift, and go to state 18
    BOOL          shift, and go to state 19
    COMPLEX       shift, and go to state 20
    IMAGINARY     shift, and go to state 21
    USER_DEFINED  shift, and go to state 22
    STRUCT        shift, and go to state 23
    UNION         shift, and go to state 24
    ENUM          shift, and go to state 25

    declaration                go to state 26
    declaration_specifiers     go to state 27
    storage_class_specifier    go to state 28
    type_specifier             go to state 29
    struct_or_union_specifier  go to state 30
    struct_or_union            go to state 31
    enum_specifier             go to state 32
    type_qualifier             go to state 33
    function_specifier         go to state 34
    translation_unit           go to state 35
    external_declaration       go to state 36
    function_definition        go to state 37


State 1

   91 storage_class_specifier: TYPEDEF •

    $default  reduce using rule 91 (storage_class_specifier)


State 2

   92 storage_class_specifier: EXTERN •

    $default  reduce using rule 92 (storage_class_specifier)


State 3

   93 storage_class_specifier: STATIC •

    $default  reduce using rule 93 (storage_class_specifier)


State 4

   94 storage_class_specifier: AUTO •

    $default  reduce using rule 94 (storage_class_specifier)


State 5

   95 storage_class_specifier: REGISTER •

    $default  reduce using rule 95 (storage_class_specifier)


State 6

  140 function_specifier: INLINE •

    $default  reduce using rule 140 (function_specifier)


State 7

  138 type_qualifier: RESTRICT •

    $default  reduce using rule 138 (type_qualifier)


State 8

   97 type_specifier: CHAR •

    $default  reduce using rule 97 (type_specifier)


State 9

   98 type_specifier: SHORT •

    $default  reduce using rule 98 (type_specifier)


State 10

   99 type_specifier: INT •

    $default  reduce using rule 99 (type_specifier)


State 11

  100 type_specifier: LONG •

    $default  reduce using rule 100 (type_specifier)


State 12

  103 type_specifier: SIGNED •

    $default  reduce using rule 103 (type_specifier)


State 13

  104 type_specifier: UNSIGNED •

    $default  reduce using rule 104 (type_specifier)


State 14

  101 type_specifier: FLOAT •

    $default  reduce using rule 101 (type_specifier)


State 15

  102 type_specifier: DOUBLE •

    $default  reduce using rule 102 (type_specifier)


State 16

  137 type_qualifier: CONST •

    $default  reduce using rule 137 (type_qualifier)


State 17

  139 type_qualifier: VOLATILE •

    $default  reduce using rule 139 (type_qualifier)


State 18

   96 type_specifier: VOID •

    $default  reduce using rule 96 (type_specifier)


State 19

  105 type_specifier: BOOL •

    $default  reduce using rule 105 (type_specifier)


State 20

  106 type_specifier: COMPLEX •

    $default  reduce using rule 106 (type_specifier)


State 21

  107 type_specifier: IMAGINARY •

    $default  reduce using rule 107 (type_specifier)


State 22

  108 type_specifier: USER_DEFINED •

    $default  reduce using rule 108 (type_specifier)


State 23

  114 struct_or_union: STRUCT •

    $default  reduce using rule 114 (struct_or_union)


State 24

  115 struct_or_union: UNION •

    $default  reduce using rule 115 (struct_or_union)


State 25

  128 enum_specifier: ENUM • '{' enumerator_list '}'
  129               | ENUM • IDENTIFIER '{' enumerator_list '}'
  130               | ENUM • '{' enumerator_list ',' '}'
  131               | ENUM • IDENTIFIER '{' enumerator_list ',' '}'
  132               | ENUM • IDENTIFIER

    IDENTIFIER  shift, and go to state 38
    '{'         shift, and go to state 39


State 26

  236 external_declaration: declaration •

    $default  reduce using rule 236 (external_declaration)


State 27

   77 declaration: declaration_specifiers • ';'
   78            | declaration_specifiers • init_declarator_list ';'
  239 function_definition: declaration_specifiers • declarator $@4 declaration_list $@5 compound_statement
  241                    | declaration_specifiers • declarator $@6 compound_statement

    IDENTIFIER  shift, and go to state 40
    '('         shift, and go to state 41
    '*'         shift, and go to state 42
    ';'         shift, and go to state 43

    init_declarator_list  go to state 44
    init_declarator       go to state 45
    declarator            go to state 46
    direct_declarator     go to state 47
    pointer               go to state 48


State 28

   79 declaration_specifiers: storage_class_specifier •
   80                       | storage_class_specifier • declaration_specifiers

    TYPEDEF       shift, and go to state 1
    EXTERN        shift, and go to state 2
    STATIC        shift, and go to state 3
    AUTO          shift, and go to state 4
    REGISTER      shift, and go to state 5
    INLINE        shift, and go to state 6
    RESTRICT      shift, and go to state 7
    CHAR          shift, and go to state 8
    SHORT         shift, and go to state 9
    INT           shift, and go to state 10
    LONG          shift, and go to state 11
    SIGNED        shift, and go to state 12
    UNSIGNED      shift, and go to state 13
    FLOAT         shift, and go to state 14
    DOUBLE        shift, and go to state 15
    CONST         shift, and go to state 16
    VOLATILE      shift, and go to state 17
    VOID          shift, and go to state 18
    BOOL          shift, and go to state 19
    COMPLEX       shift, and go to state 20
    IMAGINARY     shift, and go to state 21
    USER_DEFINED  shift, and go to state 22
    STRUCT        shift, and go to state 23
    UNION         shift, and go to state 24
    ENUM          shift, and go to state 25

    $default  reduce using rule 79 (declaration_specifiers)

    declaration_specifiers     go to state 49
    storage_class_specifier    go to state 28
    type_specifier             go to state 29
    struct_or_union_specifier  go to state 30
    struct_or_union            go to state 31
    enum_specifier             go to state 32
    type_qualifier             go to state 33
    function_specifier         go to state 34


State 29

   81 declaration_specifiers: type_specifier •
   82                       | type_specifier • declaration_specifiers

    TYPEDEF       shift, and go to state 1
    EXTERN        shift, and go to state 2
    STATIC        shift, and go to state 3
    AUTO          shift, and go to state 4
    REGISTER      shift, and go to state 5
    INLINE        shift, and go to state 6
    RESTRICT      shift, and go to state 7
    CHAR          shift, and go to state 8
    SHORT         shift, and go to state 9
    INT           shift, and go to state 10
    LONG          shift, and go to state 11
    SIGNED        shift, and go to state 12
    UNSIGNED      shift, and go to state 13
    FLOAT         shift, and go to state 14
    DOUBLE        shift, and go to state 15
    CONST         shift, and go to state 16
    VOLATILE      shift, and go to state 17
    VOID          shift, and go to state 18
    BOOL          shift, and go to state 19
    COMPLEX       shift, and go to state 20
    IMAGINARY     shift, and go to state 21
    USER_DEFINED  shift, and go to state 22
    STRUCT        shift, and go to state 23
    UNION         shift, and go to state 24
    ENUM          shift, and go to state 25

    $default  reduce using rule 81 (declaration_specifiers)

    declaration_specifiers     go to state 50
    storage_class_specifier    go to state 28
    type_specifier             go to state 29
    struct_or_union_specifier  go to state 30
    struct_or_union            go to state 31
    enum_specifier             go to state 32
    type_qualifier             go to state 33
    function_specifier         go to state 34


State 30

  109 type_specifier: struct_or_union_specifier •

    $default  reduce using rule 109 (type_specifier)


State 31

  111 struct_or_union_specifier: struct_or_union • IDENTIFIER '{' struct_declaration_list '}'
  112                          | struct_or_union • '{' struct_declaration_list '}'
  113                          | struct_or_union • IDENTIFIER

    IDENTIFIER  shift, and go to state 51
    '{'         shift, and go to state 52


State 32

  110 type_specifier: enum_specifier •

    $default  reduce using rule 110 (type_specifier)


State 33

   83 declaration_specifiers: type_qualifier •
   84                       | type_qualifier • declaration_specifiers

    TYPEDEF       shift, and go to state 1
    EXTERN        shift, and go to state 2
    STATIC        shift, and go to state 3
    AUTO          shift, and go to state 4
    REGISTER      shift, and go to state 5
    INLINE        shift, and go to state 6
    RESTRICT      shift, and go to state 7
    CHAR          shift, and go to state 8
    SHORT         shift, and go to state 9
    INT           shift, and go to state 10
    LONG          shift, and go to state 11
    SIGNED        shift, and go to state 12
    UNSIGNED      shift, and go to state 13
    FLOAT         shift, and go to state 14
    DOUBLE        shift, and go to state 15
    CONST         shift, and go to state 16
    VOLATILE      shift, and go to state 17
    VOID          shift, and go to state 18
    BOOL          shift, and go to state 19
    COMPLEX       shift, and go to state 20
    IMAGINARY     shift, and go to state 21
    USER_DEFINED  shift, and go to state 22
    STRUCT        shift, and go to state 23
    UNION         shift, and go to state 24
    ENUM          shift, and go to state 25

    $default  reduce using rule 83 (declaration_specifiers)

    declaration_specifiers     go to state 53
    storage_class_specifier    go to state 28
    type_specifier             go to state 29
    struct_or_union_specifier  go to state 30
    struct_or_union            go to state 31
    enum_specifier             go to state 32
    type_qualifier             go to state 33
    function_specifier         go to state 34


State 34

   85 declaration_specifiers: function_specifier •
   86                       | function_specifier • declaration_specifiers

    TYPEDEF       shift, and go to state 1
    EXTERN        shift, and go to state 2
    STATIC        shift, and go to state 3
    AUTO          shift, and go to state 4
    REGISTER      shift, and go to state 5
    INLINE        shift, and go to state 6
    RESTRICT      shift, and go to state 7
    CHAR          shift, and go to state 8
    SHORT         shift, and go to state 9
    INT           shift, and go to state 10
    LONG          shift, and go to state 11
    SIGNED        shift, and go to state 12
    UNSIGNED      shift, and go to state 13
    FLOAT         shift, and go to state 14
    DOUBLE        shift, and go to state 15
    CONST         shift, and go to state 16
    VOLATILE      shift, and go to state 17
    VOID          shift, and go to state 18
    BOOL          shift, and go to state 19
    COMPLEX       shift, and go to state 20
    IMAGINARY     shift, and go to state 21
    USER_DEFINED  shift, and go to state 22
    STRUCT        shift, and go to state 23
    UNION         shift, and go to state 24
    ENUM          shift, and go to state 25

    $default  reduce using rule 85 (declaration_specifiers)

    declaration_specifiers     go to state 54
    storage_class_specifier    go to state 28
    type_specifier             go to state 29
    struct_or_union_specifier  go to state 30
    struct_or_union            go to state 31
    enum_specifier             go to state 32
    type_qualifier             go to state 33
    function_specifier         go to state 34


State 35

    0 $accept: translation_unit • $end
  234 translation_unit: translation_unit • external_declaration

    $end          shift, and go to state 55
    TYPEDEF       shift, and go to state 1
    EXTERN        shift, and go to state 2
    STATIC        shift, and go to state 3
    AUTO          shift, and go to state 4
    REGISTER      shift, and go to state 5
    INLINE        shift, and go to state 6
    RESTRICT      shift, and go to state 7
    CHAR          shift, and go to state 8
    SHORT         shift, and go to state 9
    INT           shift, and go to state 10
    LONG          shift, and go to state 11
    SIGNED        shift, and go to state 12
    UNSIGNED      shift, and go to state 13
    FLOAT         shift, and go to state 14
    DOUBLE        shift, and go to state 15
    CONST         shift, and go to state 16
    VOLATILE      shift, and go to state 17
    VOID          shift, and go to state 18
    BOOL          shift, and go to state 19
    COMPLEX       shift, and go to state 20
    IMAGINARY     shift, and go to state 21
    USER_DEFINED  shift, and go to state 22
    STRUCT        shift, and go to state 23
    UNION         shift, and go to state 24
    ENUM          shift, and go to state 25

    declaration                go to state 26
    declaration_specifiers     go to state 27
    storage_class_specifier    go to state 28
    type_specifier             go to state 29
    struct_or_union_specifier  go to state 30
    struct_or_union            go to state 31
    enum_specifier             go to state 32
    type_qualifier             go to state 33
    function_specifier         go to state 34
    external_declaration       go to state 56
    function_definition        go to state 37


State 36

  233 translation_unit: external_declaration •

    $default  reduce using rule 233 (translation_unit)


State 37

  235 external_declaration: function_definition •

    $default  reduce using rule 235 (external_declaration)


State 38

  129 enum_specifier: ENUM IDENTIFIER • '{' enumerator_list '}'
  131               | ENUM IDENTIFIER • '{' enumerator_list ',' '}'
  132               | ENUM IDENTIFIER •

    '{'  shift, and go to state 57

    $default  reduce using rule 132 (enum_specifier)


State 39

  128 enum_specifier: ENUM '{' • enumerator_list '}'
  130               | ENUM '{' • enumerator_list ',' '}'

    IDENTIFIER  shift, and go to state 58

    enumerator_list  go to state 59
    enumerator       go to state 60


State 40

  143 direct_declarator: IDENTIFIER •

    $default  reduce using rule 143 (direct_declarator)


State 41

  144 direct_declarator: '(' • declarator ')'

    IDENTIFIER  shift, and go to state 40
    '('         shift, and go to state 41
    '*'         shift, and go to state 42

    declarator         go to state 61
    direct_declarator  go to state 47
    pointer            go to state 48


State 42

  156 pointer: '*' •
  157        | '*' • type_qualifier_list
  158        | '*' • pointer
  159        | '*' • type_qualifier_list pointer

    RESTRICT  shift, and go to state 7
    CONST     shift, and go to state 16
    VOLATILE  shift, and go to state 17
    '*'       shift, and go to state 42

    $default  reduce using rule 156 (pointer)

    type_qualifier       go to state 62
    pointer              go to state 63
    type_qualifier_list  go to state 64


State 43

   77 declaration: declaration_specifiers ';' •

    $default  reduce using rule 77 (declaration)


State 44

   78 declaration: declaration_specifiers init_declarator_list • ';'
   88 init_declarator_list: init_declarator_list • ',' init_declarator
